# sysinfo-http

./: .gitignore  API.md  Cargo.toml  Readme.md
.cargo/: config.toml
src/: main.rs  server.rs
src/app/: mod.rs
src/app/controllers/: base_controller.rs  mod.rs  sysinfo_controller.rs
src/app/informers/: cpu_informer.rs  disk_informer.rs  memory_informer.rs  mod.rs  network_informer.rs  sys_informer.rs  temperature_informer.rs
src/app/routes/: base_router.rs  mod.rs  sysinfo_router.rs
src/app/utils/: cli_helper.rs  logger.rs  mod.rs
